package cl.ucn.disc.dsm.pictwin.backend.model;

/**
 * The State Enum.
 *
 * @author Mack Díaz Vilches.
 */
public enum State {
    ACTIVE,
    BANNED
}
